--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPo5X9cTmrb6E5joLT9xWxR",
+      "authorship_tag": "ABX9TyOjGKgFsVbocUkqGNCHOwzO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "f59f5e67-92d7-4d79-8eab-28a2bc504abf",
+        "outputId": "ebe03aea-6fbe-4ca1-c1c9-0c4834fb4937",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -119,7 +119,7 @@
       ],
       "metadata": {
         "id": "W84boD_8VMQV",
-        "outputId": "2eeda4bf-d678-4ae9-ff1c-48d4fcdbde2f",
+        "outputId": "45fce5ad-69be-4ae4-babb-2236ab086cdd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -130,13 +130,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-11-21 03:47:57--  https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
-            "Resolving github.com (github.com)... 140.82.121.4\n",
-            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
+            "--2022-11-22 04:13:21--  https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py [following]\n",
-            "--2022-11-21 03:47:57--  https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "--2022-11-22 04:13:21--  https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 7621 (7.4K) [text/plain]\n",
@@ -144,7 +144,7 @@
             "\n",
             "linear_regression.p 100%[===================>]   7.44K  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-11-21 03:47:57 (42.1 MB/s) - ‘linear_regression.py’ saved [7621/7621]\n",
+            "2022-11-22 04:13:21 (64.4 MB/s) - ‘linear_regression.py’ saved [7621/7621]\n",
             "\n"
           ]
         }
@@ -245,7 +245,7 @@
       ],
       "metadata": {
         "id": "4VNwxL8XaoO7",
-        "outputId": "8c1d820a-47bb-4f61-bd0b-c563b6ff3e88",
+        "outputId": "ab1ab235-047a-433c-ed42-1aafcc3520c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
@@ -439,7 +439,7 @@
       ],
       "metadata": {
         "id": "LO7taUG6r_44",
-        "outputId": "76f73d38-b94d-4359-ed2d-e4759b7e6fb0",
+        "outputId": "5efa1898-b665-4af4-a64c-d853465fa5fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -465,7 +465,7 @@
       ],
       "metadata": {
         "id": "uc8zx220sSBT",
-        "outputId": "dbe52d66-b24d-41d8-85bc-b9d620b71abc",
+        "outputId": "3328fd2e-5423-4a1d-945f-d7e37f4c1dd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
@@ -530,7 +530,7 @@
       ],
       "metadata": {
         "id": "8637euDzyYXl",
-        "outputId": "5c054b23-8e00-4b0e-d54c-887ac320e728",
+        "outputId": "8b5e0f24-3869-4dec-97dc-3348e7c44883",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -565,7 +565,7 @@
       ],
       "metadata": {
         "id": "6BXgqRdLzydy",
-        "outputId": "a17a1f45-c3c6-4272-f0d0-f458ad42de50",
+        "outputId": "0471e5a1-319c-47e2-c65e-a464e1edc2e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
@@ -671,7 +671,7 @@
       ],
       "metadata": {
         "id": "IxTcSuLg_K-t",
-        "outputId": "2e693500-85d7-4695-a392-2eccc128f231",
+        "outputId": "8e4b5c49-f353-4127-fc53-56fb2bfef39b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -717,7 +717,7 @@
       ],
       "metadata": {
         "id": "yRrjgkAJAUX-",
-        "outputId": "8f69ce0e-2029-4c2c-e42a-5c2d5ffe5bd2",
+        "outputId": "3c76ae17-2f8d-44f6-dd37-0d8906e30dad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -743,7 +743,7 @@
       ],
       "metadata": {
         "id": "VTKOWXVZA5dG",
-        "outputId": "bf3fd36d-14d8-4a29-988f-137e508aa226",
+        "outputId": "11c54409-1367-4875-c6f8-424d3bdbead7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
@@ -802,7 +802,7 @@
       ],
       "metadata": {
         "id": "fTXmjqiW7aB2",
-        "outputId": "bbb31f24-a2e1-4335-f739-095885f7f6a1",
+        "outputId": "b68b2fc7-98b3-430f-d8b1-c2b388a144f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -966,7 +966,7 @@
       ],
       "metadata": {
         "id": "KH8sBUKjZFuZ",
-        "outputId": "3f529d65-6587-440f-908d-873008aa0776",
+        "outputId": "b5472161-ca27-4bb9-b480-0d05b956b949",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1016,7 +1016,7 @@
       ],
       "metadata": {
         "id": "ywuj3tIPb78E",
-        "outputId": "b3d8f0c5-3df7-47d1-d2b1-7bccb88642fb",
+        "outputId": "c4c42483-08a9-4be3-c7bb-0c009cdeff1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1059,9 +1059,232 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Sure enough, PyTorch implements the binary cross-entropy loss, `nn.BCELoss`.\n",
+        "It is a higher-order\n",
+        "function that returns the actual loss function."
+      ],
       "metadata": {
         "id": "wqbhnm2hc1UH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn = nn.BCELoss()\n",
+        "loss_fn"
+      ],
+      "metadata": {
+        "id": "7KGimSc7i5mq",
+        "outputId": "fea8f847-3710-446f-f679-59a1e63e1f4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BCELoss()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">IMPORTANT: make sure to pass the predictions first and then\n",
+        "the labels to the loss function. The order matters in the\n",
+        "implementation of this loss function."
+      ],
+      "metadata": {
+        "id": "zyDYJBNEjKYI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_labels = torch.tensor([1.0, 0.0])\n",
+        "dummy_predictions = torch.tensor([.9, .2])\n",
+        "\n",
+        "# RIGHT\n",
+        "right_loss = loss_fn(dummy_predictions, dummy_labels)\n",
+        "\n",
+        "# WRONG\n",
+        "wrong_loss = loss_fn(dummy_labels, dummy_predictions)\n",
+        "\n",
+        "print(right_loss, wrong_loss)"
+      ],
+      "metadata": {
+        "id": "kqzsESKSjLye",
+        "outputId": "758c257d-c1aa-4a11-c038-e633f4d53f0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(0.1643) tensor(15.0000)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###BCEWithLogitsLoss"
+      ],
+      "metadata": {
+        "id": "IHkOTsFMjylZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The former loss function took probabilities as an argument (together with the\n",
+        "labels, obviously). This loss function takes logits as an argument, instead of\n",
+        "probabilities.\n",
+        "\n",
+        "It means you should NOT add a sigmoid as the last layer of your model when using\n",
+        "this loss function. This loss combines both the sigmoid layer and the former binary\n",
+        "cross-entropy loss into one."
+      ],
+      "metadata": {
+        "id": "KvIcLZGAj0oe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn_logits = nn.BCEWithLogitsLoss()\n",
+        "loss_fn_logits"
+      ],
+      "metadata": {
+        "id": "BLlWQOoUmB_c",
+        "outputId": "f16a8e2a-ee7f-474e-b15b-45dd11b8674a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BCEWithLogitsLoss()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, we use logits and labels to compute the loss."
+      ],
+      "metadata": {
+        "id": "CjBHlqdymf9X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logit1 = log_odds_ratio(.9)\n",
+        "logit2 = log_odds_ratio(.2)\n",
+        "\n",
+        "dummy_labels = torch.tensor([1.0, 0.0])\n",
+        "dummy_logits = torch.tensor([logit1, logit2])\n",
+        "print(dummy_logits)"
+      ],
+      "metadata": {
+        "id": "jYFkQVuemgYv",
+        "outputId": "5284ad63-1590-4442-d45f-79b6d8a367e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 2.1972, -1.3863], dtype=torch.float64)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We have logits, and we have labels. Time to compute the loss:"
+      ],
+      "metadata": {
+        "id": "XlWpjQMbm9Ce"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss = loss_fn_logits(dummy_logits, dummy_labels)\n",
+        "loss"
+      ],
+      "metadata": {
+        "id": "4MeIh-J5m9cr",
+        "outputId": "96e97542-8b85-4452-fa50-f5c772e6ba23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.1643)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "OK, we got the same result, as expected."
+      ],
+      "metadata": {
+        "id": "RKdxAuNWnKlb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Imbalanced Dataset"
+      ],
+      "metadata": {
+        "id": "NMfm-qx7nK_n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "FrCXH_kfnNqR"
       }
     }
   ]
