--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjGKgFsVbocUkqGNCHOwzO",
+      "authorship_tag": "ABX9TyPOniKXeoV5FDp6v9UsNNSj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "ebe03aea-6fbe-4ca1-c1c9-0c4834fb4937",
+        "outputId": "7f483abd-4c02-44af-98e5-2de5bbd79803",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -118,37 +118,10 @@
         "!wget https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py"
       ],
       "metadata": {
-        "id": "W84boD_8VMQV",
-        "outputId": "45fce5ad-69be-4ae4-babb-2236ab086cdd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "W84boD_8VMQV"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2022-11-22 04:13:21--  https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py [following]\n",
-            "--2022-11-22 04:13:21--  https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 7621 (7.4K) [text/plain]\n",
-            "Saving to: ‘linear_regression.py’\n",
-            "\n",
-            "linear_regression.p 100%[===================>]   7.44K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2022-11-22 04:13:21 (64.4 MB/s) - ‘linear_regression.py’ saved [7621/7621]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -245,10 +218,10 @@
       ],
       "metadata": {
         "id": "4VNwxL8XaoO7",
-        "outputId": "ab1ab235-047a-433c-ed42-1aafcc3520c9",
+        "outputId": "e934e727-f915-4c4f-be86-2be4418065d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 433
+          "height": 381
         }
       },
       "execution_count": 6,
@@ -439,7 +412,7 @@
       ],
       "metadata": {
         "id": "LO7taUG6r_44",
-        "outputId": "5efa1898-b665-4af4-a64c-d853465fa5fa",
+        "outputId": "e19c5e52-403a-4d29-bce2-992f85502dd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -465,10 +438,10 @@
       ],
       "metadata": {
         "id": "uc8zx220sSBT",
-        "outputId": "3328fd2e-5423-4a1d-945f-d7e37f4c1dd5",
+        "outputId": "87ce5bc3-13aa-45c1-cd3e-610addd6eda0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 0
         }
       },
       "execution_count": 10,
@@ -530,7 +503,7 @@
       ],
       "metadata": {
         "id": "8637euDzyYXl",
-        "outputId": "8b5e0f24-3869-4dec-97dc-3348e7c44883",
+        "outputId": "0bde74b6-bcf1-444a-8811-08f5bdde9bbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -565,10 +538,10 @@
       ],
       "metadata": {
         "id": "6BXgqRdLzydy",
-        "outputId": "0471e5a1-319c-47e2-c65e-a464e1edc2e9",
+        "outputId": "7f1d1ed7-2cc0-420b-ab57-165078bae2e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 0
         }
       },
       "execution_count": 13,
@@ -671,7 +644,7 @@
       ],
       "metadata": {
         "id": "IxTcSuLg_K-t",
-        "outputId": "8e4b5c49-f353-4127-fc53-56fb2bfef39b",
+        "outputId": "a0dc1c5e-3416-48eb-8a46-04295a91c705",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -717,7 +690,7 @@
       ],
       "metadata": {
         "id": "yRrjgkAJAUX-",
-        "outputId": "3c76ae17-2f8d-44f6-dd37-0d8906e30dad",
+        "outputId": "0c227123-9b92-4714-985d-ecce039a43fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -743,10 +716,10 @@
       ],
       "metadata": {
         "id": "VTKOWXVZA5dG",
-        "outputId": "11c54409-1367-4875-c6f8-424d3bdbead7",
+        "outputId": "751cd784-1958-4e53-dd0b-3fe4ebec87fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 0
         }
       },
       "execution_count": 17,
@@ -802,7 +775,7 @@
       ],
       "metadata": {
         "id": "fTXmjqiW7aB2",
-        "outputId": "b68b2fc7-98b3-430f-d8b1-c2b388a144f7",
+        "outputId": "16e46070-b861-45c4-d31b-77fa188ad737",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -966,7 +939,7 @@
       ],
       "metadata": {
         "id": "KH8sBUKjZFuZ",
-        "outputId": "b5472161-ca27-4bb9-b480-0d05b956b949",
+        "outputId": "f418a760-7a0e-4bc8-ffd0-ece8277b3437",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1016,7 +989,7 @@
       ],
       "metadata": {
         "id": "ywuj3tIPb78E",
-        "outputId": "c4c42483-08a9-4be3-c7bb-0c009cdeff1b",
+        "outputId": "9ee0f066-9215-4251-e6c5-bad79c49ef8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1076,7 +1049,7 @@
       ],
       "metadata": {
         "id": "7KGimSc7i5mq",
-        "outputId": "fea8f847-3710-446f-f679-59a1e63e1f4e",
+        "outputId": "8a0ad6c7-9adf-4cb2-b73a-426fae6fcea9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1122,7 +1095,7 @@
       ],
       "metadata": {
         "id": "kqzsESKSjLye",
-        "outputId": "758c257d-c1aa-4a11-c038-e633f4d53f0e",
+        "outputId": "938f95cb-01c5-4e96-ca86-0f2653eb4454",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1170,7 +1143,7 @@
       ],
       "metadata": {
         "id": "BLlWQOoUmB_c",
-        "outputId": "f16a8e2a-ee7f-474e-b15b-45dd11b8674a",
+        "outputId": "fc1e034c-ad40-4a06-b37a-b79387e85699",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1210,7 +1183,7 @@
       ],
       "metadata": {
         "id": "jYFkQVuemgYv",
-        "outputId": "5284ad63-1590-4442-d45f-79b6d8a367e7",
+        "outputId": "60f21c86-1cf9-416a-8373-306251abcc52",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1243,7 +1216,7 @@
       ],
       "metadata": {
         "id": "4MeIh-J5m9cr",
-        "outputId": "96e97542-8b85-4452-fa50-f5c772e6ba23",
+        "outputId": "a691c51f-0ca1-475a-8be3-3d652259288a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1282,9 +1255,219 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Let’s create another dummy example\n",
+        "with an imbalance, adding two extra data points belonging to the negative class.\n",
+        "\n",
+        "For the sake of simplicity and to illustrate a quirk in the behavior of\n",
+        "`BCEWithLogitsLoss`, I will give those two extra points the same logits as the other\n",
+        "data point in the negative class."
+      ],
       "metadata": {
         "id": "FrCXH_kfnNqR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_imb_labels = torch.tensor([1.0, 0.0, 0.0, 0.0])\n",
+        "dummy_imb_logits = torch.tensor([logit1, logit2, logit2, logit2])"
+      ],
+      "metadata": {
+        "id": "p8DLmSIcp_gV"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Clearly, this is an imbalanced dataset. There are three times more data points in\n",
+        "the negative class than in the positive one. \n",
+        "\n",
+        "Now, let’s turn to the pos_weight\n",
+        "argument of BCEWithLogitsLoss. \n",
+        "\n",
+        "To compensate for the imbalance, one can set the\n",
+        "weight equals the ratio of negative to positive examples:\n",
+        "\n",
+        "$$\n",
+        "\\Large \\text{pos_weight} = \\frac{\\text{# points in negative class}}{\\text{# points in positive class}}\n",
+        "$$\n",
+        "\n",
+        "In our imbalanced dummy example, the result would be 3.0.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3y4IQCaBqryn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_neg = (dummy_imb_labels == 0).sum().float()\n",
+        "n_pos = (dummy_imb_labels == 1).sum().float()\n",
+        "\n",
+        "pos_weight = (n_neg / n_pos).view(1,)\n",
+        "pos_weight"
+      ],
+      "metadata": {
+        "id": "v55nZdz7sBja",
+        "outputId": "284d6e8c-1c06-4e99-e1d7-b22d050105d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([3.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let’s create yet another loss function, including the `pos_weight` argument this\n",
+        "time:"
+      ],
+      "metadata": {
+        "id": "PEve8ysKsbuT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn_imb = nn.BCEWithLogitsLoss(reduction=\"mean\", pos_weight=pos_weight)"
+      ],
+      "metadata": {
+        "id": "4fb9Khd2qq2e"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I guess one would expect the same loss as before; after all,\n",
+        "this is a weighted loss. Right?"
+      ],
+      "metadata": {
+        "id": "5Ar7wFoAs0jS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss = loss_fn_imb(dummy_imb_logits, dummy_imb_labels)\n",
+        "loss"
+      ],
+      "metadata": {
+        "id": "QbaYltajs1KL",
+        "outputId": "7b79a67d-a917-47b4-a168-cdd7866e6d7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.2464)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Wrong! It was `0.1643` when we had two data points, one of each class.\n",
+        "\n",
+        "Well, it turns out, PyTorch does not compute a weighted average. That’s what you\n",
+        "would expect from a weighted average:\n",
+        "\n",
+        "$$\n",
+        "\\Large \\text{weighted average} = \\frac{\\text{pos_weight} \\sum_{i=1}^{N_{\\text{pos}}}{\\text{loss}_i}+\\sum_{i=1}^{N_{\\text{neg}}}{\\text{loss}_i}}{\\text{pos_weight} N_{\\text{pos}}+N_{\\text{neg}}}\n",
+        "$$\n",
+        "\n",
+        "But this is what PyTorch does:\n",
+        "\n",
+        "$$\n",
+        "\\Large \\text{BCEWithLogitsLoss} = \\frac{\\text{pos_weight} \\sum_{i=1}^{N_{\\text{pos}}}{\\text{loss}_i}+\\sum_{i=1}^{N_{\\text{neg}}}{\\text{loss}_i}}{N_{\\text{pos}}+N_{\\text{neg}}}\n",
+        "$$\n",
+        "\n",
+        "See the difference in the denominator? \n",
+        "\n",
+        "Of course, if you multiply the losses of the\n",
+        "positive examples without multiplying their `count (N)`, you’ll end up with a number\n",
+        "larger than an actual weighted average.\n",
+        "\n",
+        "Remember the reduction argument? \n",
+        "\n",
+        "If we set it to\n",
+        "sum, our loss function will only return the numerator of the equation above."
+      ],
+      "metadata": {
+        "id": "VQMsKNqgtGk5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn_imb_sum = nn.BCEWithLogitsLoss(reduction=\"sum\", pos_weight=pos_weight)\n",
+        "\n",
+        "loss = loss_fn_imb_sum(dummy_imb_logits, dummy_imb_labels)\n",
+        "\n",
+        "loss = loss / (pos_weight * n_pos + n_neg)\n",
+        "loss"
+      ],
+      "metadata": {
+        "id": "ahWYmlyktqJt",
+        "outputId": "db8cd868-97b1-450d-f35c-bc0dc1ede839",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.1643])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Model Configuration"
+      ],
+      "metadata": {
+        "id": "PNhxGMl0uNih"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "UEvR8G2zuOdD"
       }
     }
   ]
